Correcting contrast issue - take 3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,11 +178,11 @@ h2, h3 {
 }
 
 #main_background_picture_get_cupons > h3 {
-    color: honeydew !important;;
+    color: black !important;;
 }
 
 #main_background_picture_subscription > h3 {
-    color: honeydew !important;;
+    color: black !important;;
 }
 
 
